correciones de sonar y lint

--- a/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
+++ b/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
@@ -29,7 +29,7 @@
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Start hour</mat-label>
-				<input matInput type="time" placeholder="Placeholder" formControlName="start_hour">
+				<input matInput type="time" placeholder="Placeholder" formControlName="startHour">
 			  </mat-form-field>
 		</div>
 	</div>
@@ -37,7 +37,7 @@
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>End hour</mat-label>
-				<input matInput type="time" placeholder="Placeholder" formControlName="end_hour">
+				<input matInput type="time" placeholder="Placeholder" formControlName="endHour">
 			  </mat-form-field>
 		</div>
 	</div>
