--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -8,7 +8,7 @@
 <div class="">
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
+        <caption>List schedule</caption>
         <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
