--- a/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
+++ b/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
@@ -32,7 +32,7 @@
 				<mat-label>Start hour</mat-label>
 				<input matInput type="time" 
 						placeholder="Placeholder" 
-						formControlName="start_hour" 
+						formControlName="startHour" 
 						id="createStartHour">
 			  </mat-form-field>
 		</div>
@@ -44,7 +44,7 @@
 				<input matInput 
 						type="time" 
 						placeholder="Placeholder" 
-						formControlName="end_hour"
+						formControlName="endHour"
 						id="createEndHour">
 			  </mat-form-field>
 		</div>
