--- a/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
+++ b/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
@@ -6,39 +6,43 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Subject</mat-label>
 				<input matInput placeholder="Placeholder" formControlName="subject">
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Name</mat-label>
 				<input matInput placeholder="Placeholder" formControlName="name">
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Date</mat-label>
-				<input matInput [matDatepicker]="picker" 
-						placeholder="Placeholder" 
-						formControlName="date">
+				<input matInput [matDatepicker]="picker" placeholder="Placeholder" formControlName="date">
 				<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 				<mat-datepicker #picker></mat-datepicker>
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Start hour</mat-label>
-				<input matInput type="time" placeholder="Placeholder" formControlName="startHour">
-			  </mat-form-field>
+				<mat-select formControlName="startHour" id="updateStartHour">
+					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>End hour</mat-label>
-				<input matInput type="time" placeholder="Placeholder" formControlName="endHour">
-			  </mat-form-field>
+				<mat-select formControlName="endHour" id="updateEndHour">
+					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
