--- a/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
+++ b/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
@@ -1,57 +1,54 @@
 <h1>Create schedule</h1>
 <h3>In this form you can create a new schedule</h3>
-<form [formGroup]="scheduleForm">
+<form [formGroup]="scheduleForm" (ngSubmit)="save()">
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Subject</mat-label>
 				<input matInput placeholder="Placeholder" formControlName="subject" id="createSubjet">
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Name</mat-label>
 				<input matInput placeholder="Placeholder" formControlName="name" id="createName">
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Date</mat-label>
-				<input matInput [matDatepicker]="picker" 
-						placeholder="Placeholder" 
-						formControlName="date"
-						id="createDate">
+				<input matInput [matDatepicker]="picker" placeholder="Placeholder" formControlName="date"
+					id="createDate">
 				<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 				<mat-datepicker #picker></mat-datepicker>
-			  </mat-form-field>
+			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Start hour</mat-label>
-				<input matInput type="time" 
-						placeholder="Placeholder" 
-						formControlName="startHour" 
-						id="createStartHour">
-			  </mat-form-field>
+				<mat-select formControlName="startHour" id="createStartHour">
+					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>End hour</mat-label>
-				<input matInput 
-						type="time" 
-						placeholder="Placeholder" 
-						formControlName="endHour"
-						id="createEndHour">
-			  </mat-form-field>
+				<mat-select formControlName="endHour" id="createEndHour">
+					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					</mat-option>
+				</mat-select>
+			</mat-form-field>
 		</div>
 	</div>
 	<div fxLayout="row">
 		<div fxFlex="100" fxLayoutAlign="center center">
-			<button mat-flat-button color="primary" class="margin" (click)="save()" id="createButtonSave">Save</button>
+			<button mat-flat-button color="primary" class="margin" id="createButtonSave">Save</button>
 			<button mat-flat-button color="warn" class="margin" (click)="closeModal()">Close</button>
 		</div>
 	</div>
