--- a/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
+++ b/src/app/feature/schedule/components/create-schedule/create-schedule.component.html
@@ -5,7 +5,7 @@
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Subject</mat-label>
-				<input matInput placeholder="Placeholder" formControlName="subject" id="createSubjet">
+				<input matInput placeholder="Placeholder" formControlName="subject" id="createSubject">
 			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
@@ -49,7 +49,7 @@
 	<div fxLayout="row">
 		<div fxFlex="100" fxLayoutAlign="center center">
 			<button mat-flat-button color="primary" class="margin" id="createButtonSave">Save</button>
-			<button mat-flat-button color="warn" class="margin" (click)="closeModal()">Close</button>
+			<button mat-flat-button color="warn" class="margin" id="createButtonClose" (click)="closeModal()">Close</button>
 		</div>
 	</div>
 </form>
