--- a/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
+++ b/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
@@ -1,17 +1,17 @@
 <h1>Edit schedule</h1>
 <h3>In this form you can edit a schedule</h3>
-<form [formGroup]="scheduleForm">
+<form [formGroup]="scheduleForm" (ngSubmit)="save()">
 	<div fxLayout="row">
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Subject</mat-label>
-				<input matInput placeholder="Placeholder" formControlName="subject">
+				<input matInput placeholder="Placeholder" formControlName="subject" id="updateSubject">
 			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Name</mat-label>
-				<input matInput placeholder="Placeholder" formControlName="name">
+				<input matInput placeholder="Placeholder" formControlName="name" id="updateName">
 			</mat-form-field>
 		</div>
 	</div>
@@ -19,9 +19,10 @@
 		<div class="items" fxFlex="50">
 			<mat-form-field appearance="outline">
 				<mat-label>Date</mat-label>
-				<input matInput [matDatepicker]="picker" placeholder="Placeholder" formControlName="date">
-				<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-				<mat-datepicker #picker></mat-datepicker>
+				<input matInput
+					placeholder="Placeholder" 
+					formControlName="date"
+					id="updateDate" readonly>
 			</mat-form-field>
 		</div>
 		<div class="items" fxFlex="50">
@@ -47,8 +48,8 @@
 	</div>
 	<div fxLayout="row">
 		<div fxFlex="100" fxLayoutAlign="center center">
-			<button mat-flat-button color="primary" class="margin" (click)="save()" id="editButtonSave">Save</button>
-			<button mat-flat-button color="warn" class="margin" (click)="closeModal()">Close</button>
+			<button mat-flat-button color="primary" class="margin"  id="editButtonSave">Save</button>
+			<a mat-flat-button color="warn" class="margin" id="editButtonClose" (click)="closeModal()">Close</a>
 		</div>
 	</div>
 </form>
