--- a/src/app/feature/schedule/components/list-schedule/list-schedule.component.html
+++ b/src/app/feature/schedule/components/list-schedule/list-schedule.component.html
@@ -20,43 +20,53 @@
 		<!-- Position Column -->
 		<ng-container matColumnDef="id">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> No. </mat-header-cell>
-			<mat-cell *matCellDef="let element;let i = index;" data-label="id"> {{i + 1}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" data-label="id" id="item-id-{{ i }}"> {{i + 1}} </mat-cell>
 		</ng-container>
 
 		<!-- Name Column -->
 		<ng-container matColumnDef="name">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="name"> {{element.name}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" data-label="name" id="item-name-{{ i }}"> {{element.name}} </mat-cell>
 		</ng-container>
 
 		<!-- Weight Column -->
 		<ng-container matColumnDef="subject">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> Subject </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="subject"> {{element.subject}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" 
+						data-label="subject" 
+						id="item-subject-{{ i }}"> {{element.subject}} </mat-cell>
 		</ng-container>
 
 		<!-- Symbol Column -->
 		<ng-container matColumnDef="date">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="date"> {{element.date | date: 'shortDate' }} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" 
+						data-label="date"  
+						id="item-date-{{ i }}"> {{element.date | date: 'shortDate' }} </mat-cell>
 		</ng-container>
 
 		<!-- Symbol Column -->
 		<ng-container matColumnDef="startHour">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> Start hour </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="startHour"> {{element.startHour}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" 
+						data-label="startHour" 
+						id="item-startHour-{{ i }}"> {{element.startHour}} </mat-cell>
 		</ng-container>
 
 		<!-- Symbol Column -->
 		<ng-container matColumnDef="endHour">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> End hour </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="endHour"> {{element.endHour}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" 
+						data-label="endHour" 
+						id="item-endHour-{{ i }}"> {{element.endHour}} </mat-cell>
 		</ng-container>
 
 		<!-- Symbol Column -->
 		<ng-container matColumnDef="value">
 			<mat-header-cell *matHeaderCellDef mat-sort-header> Value </mat-header-cell>
-			<mat-cell *matCellDef="let element" data-label="value"> {{element.value | currency}} </mat-cell>
+			<mat-cell *matCellDef="let element;let i = index;" 
+						data-label="value" 
+						id="item-value-{{ i }}"> {{element.value | currency}} </mat-cell>
 		</ng-container>
 
 		<!-- Symbol Column -->
