--- a/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
+++ b/src/app/feature/schedule/components/edit-schedule/edit-schedule.component.html
@@ -29,7 +29,7 @@
 			<mat-form-field appearance="outline">
 				<mat-label>Start hour</mat-label>
 				<mat-select formControlName="startHour" id="updateStartHour">
-					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					<mat-option *ngFor="let item of horario; trackBy: ( 'id' | trackBy)" [value]="item"> {{ item }}
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
@@ -40,7 +40,7 @@
 			<mat-form-field appearance="outline">
 				<mat-label>End hour</mat-label>
 				<mat-select formControlName="endHour" id="updateEndHour">
-					<mat-option *ngFor="let item of horario" [value]="item"> {{ item }}
+					<mat-option *ngFor="let item of horario; trackBy: ( 'id' | trackBy)" [value]="item"> {{ item }}
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
