--- a/src/app/feature/schedule/components/list-schedule/list-schedule.component.scss
+++ b/src/app/feature/schedule/components/list-schedule/list-schedule.component.scss
@@ -1,53 +1,64 @@
-table {
-  margin: 0px auto;
-  width: 96%;
-}
-
 body {
   font-family: "Covered By Your Grace", cursive;
   line-height: 1.25;
 }
 
+.links{
+	text-decoration: none;
+	cursor: pointer;
+}
+
+table {
+  margin: 0px auto;
+  width: 96%;
+}
+
+table caption {
+  font-family: sans-serif;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
 @media screen and (max-width: 960px) {
   .mat-table {
-	border: 0;
-	vertical-align: middle;
+    border: 0;
+    vertical-align: middle;
   }
 
   .mat-table caption {
-	font-size: 1em;
+    font-size: 1em;
   }
 
   .mat-table .mat-row {
-	border-bottom: 5px solid #ddd;
-	display: block;
-	padding: 0 20px 0 20px;
+    border-bottom: 5px solid #ddd;
+    display: block;
+    padding: 0 20px 0 20px;
   }
 
   .mat-table .mat-cell {
-	border-bottom: 1px solid #ddd;
-	display: block;
-	font-size: 1em;
-	text-align: right;
-	font-weight: bold;
-	height: 30px;
-	margin: 5px 0px 0px 0px;
-	padding: 0px 0px 0px 24px;
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: 1em;
+    text-align: right;
+    font-weight: bold;
+    height: 30px;
+    margin: 5px 0px 0px 0px;
+    padding: 0px 0px 0px 24px;
   }
   .mat-table .mat-cell:before {
-	content: attr(data-label);
-	float: left;
-	text-transform: uppercase;
-	font-weight: normal;
+    content: attr(data-label);
+    float: left;
+    text-transform: uppercase;
+    font-weight: normal;
 
-	font-size: 0.85em;
+    font-size: 0.85em;
   }
 }
 
-.header{
-	margin: 10px;
+.header {
+  margin: 10px 20px;
 }
 
-.buttons button{
-	float: right;
+.buttons button {
+  float: right;
 }
